tests/org.eclipse.php.core.tests/workspace/errors/php53/testUseStatementUsage03.pdtt
--TEST--
Test unused use statement
--FILE--
<?php
use Foo\Bar;
use Foo\Boo; // should show warning

//$var = new Boo();
--EXPECT--
[line=2, start=6, end=18] Unused import 'Foo\Bar', consider removing
[line=3, start=19, end=31] Unused import 'Foo\Boo', consider removing